[gd_scene load_steps=6 format=3 uid="uid://kaismy3m0etm"]

[ext_resource type="Texture2D" uid="uid://mw1840onpnph" path="res://assets/panel_beigeLight.png" id="1_28117"]
[ext_resource type="Script" path="res://scenes/game_over_ui/game_over_ui.gd" id="1_y3iux"]
[ext_resource type="LabelSettings" uid="uid://iubd5adyqn7n" path="res://assets/LG_Title_96.tres" id="2_jjhab"]
[ext_resource type="LabelSettings" uid="uid://cax5bcpx5u5rv" path="res://assets/LG_Blue_48.tres" id="3_eycbw"]
[ext_resource type="LabelSettings" uid="uid://bgrh87meg8gx1" path="res://assets/LG_Red_48.tres" id="4_qdinc"]

[node name="GameOverUi" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_y3iux")

[node name="MC" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 64
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 64

[node name="NinePatchRect" type="NinePatchRect" parent="MC"]
layout_mode = 2
texture = ExtResource("1_28117")
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MC/NinePatchRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Spacer" type="Control" parent="MC/NinePatchRect/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="MC/NinePatchRect/VBoxContainer"]
layout_mode = 2
text = "LEVEL COMPLETE"
label_settings = ExtResource("2_jjhab")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer2" type="Control" parent="MC/NinePatchRect/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MovesLabel" type="Label" parent="MC/NinePatchRect/VBoxContainer"]
layout_mode = 2
text = "MOVES"
label_settings = ExtResource("3_eycbw")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer3" type="Control" parent="MC/NinePatchRect/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="RecordLabel" type="Label" parent="MC/NinePatchRect/VBoxContainer"]
visible = false
layout_mode = 2
text = "A NEW RECORD!"
label_settings = ExtResource("4_qdinc")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer4" type="Control" parent="MC/NinePatchRect/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
